# library_system_library

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test_runner.yml
deployment/dev/: Dockerfile  docker-compose.yml
deployment/dev/scripts/: run.sh
deployment/prod/: Dockerfile  docker-compose.yml
deployment/prod/nginx/: Dockerfile  nginx.conf
deployment/prod/scripts/: run.sh
src/: conf.py  database.py  exceptions.py  extensions.py  jwt_token_manager.py  main.py  mixins.py  models.py  permissions.py  query_builders.py  schema.py  utils.py
src/database/: crud_factory.py  db_conf.py  models.py  query_builders.py
src/database/validators/: author.py  base.py  book.py
src/definitions/: author.py  base.py  book.py
src/filters/: author.py  base.py  book.py
src/inputs/: author.py  book.py
src/resolvers/: author.py
src/routers/: author.py  book.py
src/schema/: admin.py  basic.py
src/validators/: author.py
tests/: conftest.py  test_author_schemas.py
tests/test_schemas/test_author/: conftest.py  test_admin_user.py  test_basic_user.py
tests/test_schemas/test_book/: conftest.py  test_admin_user.py  test_basic_user.py
