[tool.poetry]
name = "library"
version = "0.1.0"
package-mode = false
description = ""
authors = ["ndestrieux <n.destrieux@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
fastapi = "~0.111"
sqlalchemy = "~2.0"
uvicorn = {extras = ["standard"], version = "~0.30"}
pydantic-settings = "~2.2"
strawberry-graphql = {extras = ["fastapi"], version = "~0.262"}
pyjwt = "~2.10"
psycopg2-binary = "~2.9"


[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
pre-commit = "~3.7"
pytest = "~8.3"
pytest-asyncio = "~0.23"
freezegun = "~1.5"
pytest-env = "~1.1"
pytest-mock = "~3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins.dotenv]
ignore = "false"
location = "./src/.env"


[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v -ra -q"
minversion = "6.0"
filterwarnings = ["ignore:'typing.ByteString' is deprecated and slated for removal in Python 3.14", "ignore:Please use `import python_multipart` instead."]
env = [
    "WHICH_DB=sqlite",
    "DB_NAME=test_library.sqlite3",
    "DB_USERNAME=test_user",
    "DB_PASSWORD=test_pass",
    "JWT_SECRET=test_secret",
    "JWT_ALG=HS256",
]
